# mcp-knowledgebase-llm

./: README.md  client.py  pyproject.toml  server.py
data/: data.json
